extracted some strings into android resources, more to go

--- a/wibb-android/app/src/main/res/values/strings.xml
+++ b/wibb-android/app/src/main/res/values/strings.xml
@@ -8,22 +8,25 @@
     <string name="addoff_choose_price">How Expensive?</string>
     <string name="addoff_choose_time">How Long?</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="addoff_header_offerPreview">Offer Preview</string>
+
+
     <string name="title_activity_settings">Settings</string>
 
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
+    <string name="settings_header_global">Global Settings</string>
+    <string name="settings_global_apiurl">Wibb Server URL</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
+    <string name="addoff_price_default">€0</string>
+    <string name="grid_item_default">DEFAULT</string>
 
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="toast_newOffer_success">Successfully added new offer!</string>
+    <string name="toast_newOffer_fail">Failed to add new offer!</string>
+    <string name="toast_newOffer_invalid">This offer is invalid!</string>
+
+    <string name="toast_connectionError">Failed to retrieve data from the Server! (Correct API Server URL?)</string>
+
+    <string name="toast_reportSubmitted">Report #%1$s submitted!</string>
+    <string name="toast_reportFailed">Could not report offer. Try again Later!</string>
+
+    <string name="offerCard_store_prefix">at</string>
 </resources>
