some changes in the preferences
also internationalization in offer card

--- a/wibb-android/app/src/main/res/values-de/strings.xml
+++ b/wibb-android/app/src/main/res/values-de/strings.xml
@@ -36,11 +36,10 @@
     <string name="contentRequest_editText_hint">Was können wir bei Wibb verbessern?</string>
     <string name="toast_contentRequest_success">Vorschlag erfolgreich gesendet!</string>
     <string name="toast_contentRequest_fail">Vorschlag konnte nicht gesendet werden!</string>
-    
-    <string name="settings_header_newContent">Neuen Inhalt vorschlagen</string>
-    <string name="settings_header_newContent_summary">Hier kannst du neue Inhalte vorschlagen!</string>
-    <string name="settings_newContent_beer">Ein neues Bier vorschlagen</string>
-    <string name="settings_newContent_store">Ein neues Geschäft vorschlagen</string>
+
+    <string name="settings_header_feedback">Feedback</string>
+    <string name="settings_feedback_label">Sag\' uns was du von der App hältst!</string>
+    <string name="settings_feedback_suggestion">Du kannst auch ein neues Bier oder ein neues Geschäft einreichen!</string>
 
     <string name="no_offers">Wir konnten kein Angebot finden. &#128531;</string>
 
@@ -54,4 +53,6 @@
 
     <string name="menuOffer_find_nearby">In Google Maps anzeigen</string>
     <string name="menuOffer_report_offer">Melden</string>
+    <string name="offer_card_date_default">von - bis</string>
+    <string name="offer_card_datestr_format">von %s.\nbis %s.</string>
 </resources>
