--- a/wibb-android/app/src/main/res/values-de/strings.xml
+++ b/wibb-android/app/src/main/res/values-de/strings.xml
@@ -65,6 +65,7 @@
     <string name="settings_header_storeFavourites">Lieblingsgeschäfte ändern</string>
     <string name="settings_description_storeFavourites">Dir werden nur deine Lieblingsgeschäfte angezeigt.</string>
 
-    <string name="offer_card_no_date_hint">Vielleicht ungültig!</string>
+    <string name="offer_card_no_date_hint">Kein Datum!</string>
     <string name="remove_this_offer_it_is_invalid">Angebot löschen, es ist ungültig</string>
+    <string name="some_offers_listed_here">Einige Angebote wurden ohne Datum eingatragen und könnten veraltet sein. Wir löschen solche Angebote nach 7 Tagen.</string>
 </resources>
