feat(android): Developer Mode integration
API url preference is only visible when the device is in Developer Mode.

--- a/wibb-android/app/src/main/res/values/strings.xml
+++ b/wibb-android/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 
     <string name="title_activity_settings">Settings</string>
 
-    <string name="settings_header_global">Global Settings</string>
+    <string name="settings_header_dev_mode">Developer Options</string>
     <string name="settings_global_apiurl">Wibb Server URL</string>
 
     <string name="addoff_price_default">~€0</string>
