--- a/wibb-android/app/src/main/res/values-de/strings.xml
+++ b/wibb-android/app/src/main/res/values-de/strings.xml
@@ -16,7 +16,7 @@
 
     <string name="title_activity_settings">Einstellungen</string>
 
-    <string name="settings_header_global">Globale Einstellungen</string>
+    <string name="settings_header_dev_mode">Entwickler Optionen</string>
     <string name="settings_global_apiurl">Wibb Server URL</string>
 
     <string name="addoff_price_default">~€0</string>
