--- a/wibb-android/app/src/main/res/values-de/strings.xml
+++ b/wibb-android/app/src/main/res/values-de/strings.xml
@@ -73,4 +73,5 @@
     <string name="theme_light">Hell</string>
     <string name="theme_dark">Dunkel</string>
     <string name="theme_system">Gleich wie Android</string>
+    <string name="settings_theme_desc">Aussehen ändern</string>
 </resources>
